Add render script and template:

--- a/config/database.yml
+++ b/config/database.yml
@@ -22,8 +22,8 @@ default: &default
 development:
   <<: *default
   database: boat_cruise_reservation_development
-  username: developer
-  password: developer
+  # username: developer
+  # password: developer
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
@@ -40,7 +40,7 @@ development:
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  # port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,8 +57,8 @@ development:
 test:
   <<: *default
   database: boat_cruise_reservation_test
-  username: developer
-  password: developer
+  # username: developer
+  # password: developer
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
