--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,11 @@ default: &default
 development:
   <<: *default
   database: boat_cruise_reservation_development
+
+  host: localhost   # or the hostname or IP of your PostgreSQL server
+  port: 5433        # the port where PostgreSQL is running
+  username: postgres
+  password: "1234" 
   # username: developer
   # password: developer
   # The specified database role being used to connect to PostgreSQL.
@@ -57,6 +62,11 @@ development:
 test:
   <<: *default
   database: boat_cruise_reservation_test
+
+  host: localhost   # or the hostname or IP of your PostgreSQL server
+  port: 5433        # the port where PostgreSQL is running
+  username: postgres
+  password: "1234" 
   # username: developer
   # password: developer
 # As with config/credentials.yml, you never want to store sensitive information,
