--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,22 @@
 databases:
-  - name: boat-cruise-reservation-api
-    databaseName: boat_cruise_reservation_production
-    user: boat_cruise_reservation
+  - name: micronaut
+    databaseName: micronaut_qylg
+    user: micronaut_qylg_user
     plan: free
 
 services:
   - type: web
-    name: boat-cruise-reservation-api
+    name: expended
     runtime: ruby
     plan: free
     buildCommand: "./bin/render-build.sh"
-    # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
-    startCommand: "bundle exec rails server"
+    # preDeployCommand: "./bin/rails db:migrate" # preDeployCommand only available on paid instance types
+    startCommand: "./bin/rails server"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
-          name: boat-cruise-reservation-api
+          name: micronaut
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
-      - key: WEB_CONCURRENCY
-        value: 2 # sensible default
+      
